--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/ol": "^5.3.0",
     "parcel-bundler": "^1.11.0",
+    "sass": "^1.20.3",
     "typescript": "^3.2.4"
+  },
+  "dependencies": {
+    "ol": "^5.3.2"
   }
 }
